--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,11 @@ h2 {
     padding: 0;
 }
 
+#game {
+    max-height:100vh;
+    max-width: 100vw;
+}
+
 .flex-center {
     display: flex;
     align-items: center;
