--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: Londrina;
+    src: url('./../fonts/LondrinaSolid-Regular.ttf');
+}
+
 body {
-    font-family: 'Londrina Solid', sans-serif;
+    font-family: 'Londrina', sans-serif;
 }
 
 h1 {
